--- a/apps/dashdot-lite/config.json
+++ b/apps/dashdot-lite/config.json
@@ -6,7 +6,7 @@
   "dynamic_config": true,
   "id": "dashdot-lite",
   "tipi_version": 27,
-  "version": "6.2.4",
+  "version": "latest",
   "categories": ["utilities"],
   "description": "dash. (or dashdot) is a modern server dashboard, running on the latest tech, designed with glassmorphism in mind. It is intended to be used for smaller VPS and private servers.",
   "short_desc": "A simple, modern server dashboard, primarily used by smaller private server (modded to save resources).",
